--- a/code/package.json
+++ b/code/package.json
@@ -17,6 +17,7 @@
     "passport": "0.2.x",
     "passport-local": "1.0.x",
     "passport-local-mongoose": "1.0.x",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "guid": "~0.0.12"
   }
 }
